# tkinter_gl

./: .gitignore  Makefile  README.rst  pyproject.toml  setup.py
cython_src/: gl_headers.h  legacy.pxd  legacy.pyx
src/tkinter_gl/: __init__.py
src/tkinter_gl/tk/: README  license.terms
src/tkinter_gl/tk/darwin/Tkgl1.1/: libTkgl1.1.dylib  libtcl9Tkgl1.1.dylib  pkgIndex.tcl
src/tkinter_gl/tk/darwin/Tkgl1.2/: libTkgl1.2.dylib  libtcl9Tkgl1.2.dylib  pkgIndex.tcl
src/tkinter_gl/tk/darwin/Tkgl1.2.1/: libTkgl1.2.dylib  libtcl9Tkgl1.2.dylib
src/tkinter_gl/tk/linux-aarch64/Tkgl1.2.1/: pkgIndex.tcl
src/tkinter_gl/tk/linux/Tkgl1.1/: pkgIndex.tcl
src/tkinter_gl/tk/win32/TkGL1.0/: Tkgl10t.lib  pkgIndex.tcl  tcl9Tkgl10.lib
src/tkinter_gl/tk/win32/TkGL1.1/: Tkgl11t.lib  pkgIndex.tcl  tcl9Tkgl11.lib
src/tkinter_gl/tk/win32/TkGL1.2/: Tkgl12t.lib  pkgIndex.tcl  tcl9Tkgl12.lib
src/tkinter_gl/tk/win32/TkGL1.2.1/: Tkgl121t.lib  pkgIndex.tcl  tcl9Tkgl121.lib
test/: clear.py  clear.tcl  clock.py  gradient.py  square.py
